--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@
 font-family: Arial, sans-serif;
 text-align: center;
 margin-top: 50px;
-background-color: #f3f4f6;
-color: #333;
+background-color: black;
+color: white;
  }
